# core-agent

./: .gitignore  README.md  TEST_SCENARIOS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.local.json
core-packages/context-engine/: package.json
core-packages/context-engine/src/: context-assembler.ts  context-budget.ts  history-compressor.ts  index.ts  token-estimator.ts  tool-filter.ts
core-packages/governance/: package.json
core-packages/governance/src/: admin-api.ts  (+3 more)
core-packages/harness/: package.json
core-packages/memory/: package.json
core-packages/observability/: package.json
core-packages/orchestrator/: package.json
core-packages/rule/: package.json
core-packages/skill/: package.json
core-packages/storage/: package.json
core-packages/types/: package.json
docs/: architecture.md  auth.md  cli-ux.md  events.md  getting-started.md  memory.md  packages.md  soul.md  tools.md  vllm.md
helm/chamelion/: Chart.yaml  values.yaml
sdk/: README.md
sdk/python/: pyproject.toml
sdk/python/chameleon/: __init__.py  agent_loop.py  registry.py  sub_agent_tool.py  tool_dispatcher.py  types.py
sdk/python/chameleon/providers/: openai_provider.py
sdk/python/tests/: test_agent_loop.py  test_registry.py
sdk/typescript/: package.json
skills/: code-edit.skill.md  code-review.skill.md  file-read.skill.md  file-search.skill.md  file-write.skill.md  shell-exec.skill.md
tests/e2e/: agent-loop.e2e.test.ts  e2e-report-2026-03-07.md  recipe-scenarios.e2e.test.ts  run-e2e-report.mjs  setup.ts  vitest.config.ts
(+100 files in other folders)
