[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chameleon-agent"
version = "0.1.0"
description = "Lightweight agent framework — Python SDK for Chameleon"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["chameleon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
